[tool.poetry]
name = "progression"
version = "0.1.4"
description = "A python progress bar in ascii art."
authors = ["Richard Hartmann <richard.hartmann@tu-dresden.de>"]
license = "BSD (3 clause)"
classifiers = [
  "Operating System :: OS Independent",
]
repository = "https://github.com/cimatosa/progression"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
